--- a/requirements.txt
+++ b/requirements.txt
@@ -6,16 +6,20 @@ Babel==2.12.1
 backcall==0.2.0
 beautifulsoup4==4.12.2
 certifi==2023.7.22
+cfgv==3.4.0
 charset-normalizer==3.2.0
 click==8.1.6
 comm==0.1.4
 debugpy==1.6.7.post1
 decorator==5.1.1
+distlib==0.3.7
 docopt==0.6.2
 docutils==0.18.1
 executing==1.2.0
 fastjsonschema==2.18.0
+filelock==3.12.2
 greenlet==2.0.2
+identify==2.5.26
 idna==3.4
 imagesize==1.4.1
 importlib-metadata==6.8.0
@@ -41,11 +45,13 @@ myst-parser==0.18.1
 nbclient==0.7.4
 nbformat==5.9.2
 nest-asyncio==1.5.7
+nodeenv==1.8.0
 packaging==23.1
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 platformdirs==3.10.0
+pre-commit==3.3.3
 prompt-toolkit==3.0.39
 psutil==5.9.5
 ptyprocess==0.7.0
@@ -88,6 +94,7 @@ traitlets==5.9.0
 typing_extensions==4.7.1
 uc-micro-py==1.0.2
 urllib3==2.0.4
+virtualenv==20.24.3
 wcwidth==0.2.6
 yarg==0.1.9
 zipp==3.16.2
