Adding some template materials

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,9 @@ psi.*.clean
 # git-secret
 .gitsecret/keys/random_seed
 !*.secret
+
+# Materials
 book/classes/class-02.md
+book/assignments/assignment-01.md
+book/classes/class-03.md
+book/assignments/assignment-02.md
