--- a/requirements.txt
+++ b/requirements.txt
@@ -91,6 +91,8 @@ stack-data==0.6.2
 tabulate==0.9.0
 tornado==6.3.3
 traitlets==5.9.0
+types-beautifulsoup4==4.12.0.6
+types-html5lib==1.1.11.15
 typing_extensions==4.7.1
 uc-micro-py==1.0.2
 urllib3==2.0.4
