Redirect url is still wrong

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -33,8 +33,7 @@ html:
   home_page_in_navbar: false
   baseurl: www.aalexmmaldonado.com/biosc1630-2023-fall
   comments:
-    utterances:
-      repo: aalexmmaldonado/biosc1630-2023-fall
+    utterances: true
 
 latex:
   latex_documents:
