--- a/book/_config.yml
+++ b/book/_config.yml
@@ -33,7 +33,8 @@ html:
   home_page_in_navbar: false
   baseurl: www.aalexmmaldonado.com/biosc1630-2023-fall
   comments:
-    utterances: true
+    utterances:
+      repo: aalexmmaldonado/biosc1630-2023-fall
 
 latex:
   latex_documents:
