--- a/requirements.txt
+++ b/requirements.txt
@@ -18,11 +18,14 @@ docutils==0.17.1
 executing==1.2.0
 fastjsonschema==2.18.0
 filelock==3.12.2
+gitdb==4.0.10
+GitPython==3.1.33
 greenlet==2.0.2
 identify==2.5.26
 idna==3.4
 imagesize==1.4.1
 importlib-metadata==6.8.0
+iniconfig==2.0.0
 ipykernel==6.25.1
 ipython==8.14.0
 jedi==0.19.0
@@ -51,6 +54,7 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 platformdirs==3.10.0
+pluggy==1.3.0
 pre-commit==3.3.3
 prompt-toolkit==3.0.39
 psutil==5.9.5
@@ -60,6 +64,7 @@ pybtex==0.24.0
 pybtex-docutils==1.0.2
 pydata-sphinx-theme==0.13.3
 Pygments==2.16.1
+pytest==7.4.0
 python-dateutil==2.8.2
 PyYAML==6.0.1
 pyzmq==25.1.1
@@ -67,6 +72,7 @@ referencing==0.30.2
 requests==2.31.0
 rpds-py==0.9.2
 six==1.16.0
+smmap==5.0.0
 snowballstemmer==2.2.0
 soupsieve==2.4.1
 Sphinx==5.0.2
@@ -74,6 +80,7 @@ sphinx-book-theme==1.0.1
 sphinx-comments==0.0.3
 sphinx-copybutton==0.5.2
 sphinx-jupyterbook-latex==0.5.2
+sphinx-last-updated-by-git==0.3.6
 sphinx-multitoc-numbering==0.1.3
 sphinx-thebe==0.2.1
 sphinx-togglebutton==0.3.2
