--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,9 @@ nbclient==0.7.4
 nbformat==5.9.2
 nest-asyncio==1.5.7
 nodeenv==1.8.0
+numpy==1.25.2
 packaging==23.1
+pandas==2.1.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -66,11 +68,13 @@ pydata-sphinx-theme==0.13.3
 Pygments==2.16.1
 pytest==7.4.0
 python-dateutil==2.8.2
+pytz==2023.3
 PyYAML==6.0.1
 pyzmq==25.1.1
 referencing==0.30.2
 requests==2.31.0
 rpds-py==0.9.2
+scipy==1.11.2
 six==1.16.0
 smmap==5.0.0
 snowballstemmer==2.2.0
@@ -101,6 +105,7 @@ traitlets==5.9.0
 types-beautifulsoup4==4.12.0.6
 types-html5lib==1.1.11.15
 typing_extensions==4.7.1
+tzdata==2023.3
 uc-micro-py==1.0.2
 urllib3==2.0.4
 virtualenv==20.24.3
