Adding a bunch of learning objectives draft

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ psi.*.clean
 book/classes/class-02.md
 book/classes/class-03.md
 book/assignments/assignment-02.md
+book/classes/class-04.md
+book/classes/class-05.md
+book/classes/class-06.md
+book/classes/class-07.md
