--- a/book/_config.yml
+++ b/book/_config.yml
@@ -21,7 +21,7 @@ sphinx:
     - sphinx_last_updated_by_git
 
 execute:
-  execute_notebooks: force
+  execute_notebooks: auto
 
 parse:
   myst_enable_extensions:
@@ -54,3 +54,9 @@ repository:
   url: https://github.com/aalexmmaldonado/biosc1630-2023-fall  # Online location of your book
   path_to_book: book  # Optional path to your book, relative to the repository root
   branch: main  # Which branch of the repository should be used when creating links (optional)
+
+launch_buttons:
+  notebook_interface: "jupyterlab"
+  colab_url: "https://colab.research.google.com"
+  binderhub_url: https://mybinder.org/
+  thebe: true
