Starting materials for class 2

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ book/classes/class-04.md
 book/classes/class-05.md
 book/classes/class-06.md
 book/classes/class-07.md
+book/activities/03-activity-reading-for-gist.md
+book/activities/04-activity-active-reading.md
