--- a/book/_config.yml
+++ b/book/_config.yml
@@ -31,6 +31,7 @@ parse:
     - substitution
     - tasklist
     - substitution
+    - strikethrough
 
 html:
   favicon: ./files/images/favicon.ico
