--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ book/classes/class-07.md
 book/activities/03-activity-reading-for-gist.md
 book/activities/04-activity-active-reading.md
 book/activities/05-activity-role-based-article-analysis.md
+book/solutions/solution-01.md
