--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ book/activities/03-activity-reading-for-gist.md
 book/activities/04-activity-active-reading.md
 book/activities/05-activity-role-based-article-analysis.md
 book/solutions/solution-01.md
+book/misc/paper-collection.md
