--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,14 @@ book/classes/class-06.md
 book/classes/class-07.md
 book/activities/03-activity-reading-for-gist.md
 book/activities/04-activity-active-reading.md
-book/activities/05-activity-role-based-article-analysis.md
 book/solutions/solution-01.md
 book/misc/paper-collection.md
+book/activities/05-activity-role-based-analysis.md
+book/classes/class-08.md
+book/classes/class-09.md
+book/classes/class-10.md
+book/classes/class-11.md
+book/classes/class-12.md
+book/classes/class-13.md
+book/classes/class-14.md
+book/classes/class-15.md
