--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ book/classes/class-15.md
 book/activities/02-activity-active-reading.md
 book/activities/02-activity-reading-for-gist.md
 book/activities/02-activity-role-based-analysis.md
+book/slides/pdfs/biosc-1630-2023-fall-02.pdf
