Starting paper draft assignment

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ book/classes/class-12.md
 book/classes/class-13.md
 book/classes/class-14.md
 book/classes/class-15.md
+book/assignments/partial-draft.md
+book/resources/paper-format-guidelines.md
