--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 accessible-pygments==0.0.4
 alabaster==0.7.13
-asttokens==2.2.1
+asttokens==2.4.0
 attrs==23.1.0
 Babel==2.12.1
 backcall==0.2.0
@@ -8,33 +8,33 @@ beautifulsoup4==4.12.2
 certifi==2023.7.22
 cfgv==3.4.0
 charset-normalizer==3.2.0
-click==8.1.6
+click==8.1.7
 comm==0.1.4
-debugpy==1.6.7.post1
+debugpy==1.7.0
 decorator==5.1.1
 distlib==0.3.7
 docopt==0.6.2
-docutils==0.17.1
+docutils==0.18.1
 executing==1.2.0
 fastjsonschema==2.18.0
-filelock==3.12.2
+filelock==3.12.3
 gitdb==4.0.10
-GitPython==3.1.33
+GitPython==3.1.35
 greenlet==2.0.2
-identify==2.5.26
+identify==2.5.27
 idna==3.4
 imagesize==1.4.1
 importlib-metadata==6.8.0
 iniconfig==2.0.0
-ipykernel==6.25.1
-ipython==8.14.0
+ipykernel==6.25.2
+ipython==8.15.0
 jedi==0.19.0
 Jinja2==3.1.2
 jsonschema==4.19.0
 jsonschema-specifications==2023.7.1
 jupyter-book==0.15.1
 jupyter-cache==0.6.1
-jupyter_client==8.3.0
+jupyter_client==8.3.1
 jupyter_core==5.3.1
 latexcodec==2.0.1
 linkify-it-py==2.0.2
@@ -57,28 +57,28 @@ pexpect==4.8.0
 pickleshare==0.7.5
 platformdirs==3.10.0
 pluggy==1.3.0
-pre-commit==3.3.3
+pre-commit==3.4.0
 prompt-toolkit==3.0.39
 psutil==5.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pybtex==0.24.0
-pybtex-docutils==1.0.2
+pybtex-docutils==1.0.3
 pydata-sphinx-theme==0.13.3
 Pygments==2.16.1
-pytest==7.4.0
+pytest==7.4.2
 python-dateutil==2.8.2
-pytz==2023.3
+pytz==2023.3.post1
 PyYAML==6.0.1
 pyzmq==25.1.1
 referencing==0.30.2
 requests==2.31.0
-rpds-py==0.9.2
+rpds-py==0.10.2
 scipy==1.11.2
 six==1.16.0
 smmap==5.0.0
 snowballstemmer==2.2.0
-soupsieve==2.4.1
+soupsieve==2.5
 Sphinx==5.0.2
 sphinx-book-theme==1.0.1
 sphinx-comments==0.0.3
@@ -96,8 +96,8 @@ sphinxcontrib-devhelp==1.0.5
 sphinxcontrib-htmlhelp==2.0.4
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.6
-sphinxcontrib-serializinghtml==1.1.8
-SQLAlchemy==2.0.19
+sphinxcontrib-serializinghtml==1.1.9
+SQLAlchemy==2.0.20
 stack-data==0.6.2
 tabulate==0.9.0
 tornado==6.3.3
@@ -108,7 +108,7 @@ typing_extensions==4.7.1
 tzdata==2023.3
 uc-micro-py==1.0.2
 urllib3==2.0.4
-virtualenv==20.24.3
+virtualenv==20.24.5
 wcwidth==0.2.6
 yarg==0.1.9
 zipp==3.16.2
