--- a/.gitignore
+++ b/.gitignore
@@ -19,22 +19,22 @@ psi.*.clean
 *.bak
 
 # Materials
-book/classes/class-03.md
-book/classes/class-04.md
-book/classes/class-05.md
-book/classes/class-06.md
-book/classes/class-07.md
-book/solutions/solution-01.md
+book/lessons/lesson-03.md
+book/lessons/lesson-04.md
+book/lessons/lesson-05.md
+book/lessons/lesson-06.md
+book/lessons/lesson-07.md
+book/assignments/solutions/solution-01.md
 book/misc/paper-collection.md
-book/classes/class-08.md
-book/classes/class-09.md
-book/classes/class-10.md
-book/classes/class-11.md
-book/classes/class-12.md
-book/classes/class-13.md
-book/classes/class-14.md
-book/classes/class-15.md
-book/resources/paper-format-guidelines.md
-book/assignments/paper-first-draft.md
-book/assignments/paper-second-draft.md
-book/assignments/paper-final-draft.md
+book/lessons/lesson-08.md
+book/lessons/lesson-09.md
+book/lessons/lesson-10.md
+book/lessons/lesson-11.md
+book/lessons/lesson-12.md
+book/lessons/lesson-13.md
+book/lessons/lesson-14.md
+book/lessons/lesson-15.md
+book/assignments/paper/paper-format-guidelines.md
+book/assignments/paper/paper-first-draft.md
+book/assignments/paper/paper-second-draft.md
+book/assignments/paper/paper-final-draft.md
