--- a/book/_config.yml
+++ b/book/_config.yml
@@ -12,7 +12,7 @@ sphinx:
   config:
     language: en
     bibtex_bibfiles:
-      - ./refs.bib
+      - ./resources/refs.bib
     # https://docs.python.org/3/library/datetime.html#strftime-and-strptime-format-codes
     html_last_updated_fmt: "%b %d, %Y at %I:%M %p"
     # https://tzdata.readthedocs.io/en/latest/#
