Add framework to manage page identifiers

--- a/book/_config.yml
+++ b/book/_config.yml
@@ -21,6 +21,8 @@ sphinx:
       - myst.strikethrough
   extra_extensions:
     - sphinx_last_updated_by_git
+  local_extensions:
+    dc_metadata: extensions/
 
 execute:
   execute_notebooks: auto
