--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ book/assignments/paper/paper-format-guidelines.md
 book/assignments/paper/paper-first-draft.md
 book/assignments/paper/paper-second-draft.md
 book/assignments/paper/paper-final-draft.md
+book/classes/activities/03-activity-method-recommendation.md
