Adding slides for class 03

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -62,6 +62,7 @@ parts:
         sections:
           - file: classes/slides/slides-01
           - file: classes/slides/slides-02
+          - file: classes/slides/slides-03
 
 
   - caption: Assignments
