--- a/book/_config.yml
+++ b/book/_config.yml
@@ -19,6 +19,7 @@ sphinx:
     git_last_updated_timezone: "America/New_York"
     suppress_warnings:
       - myst.strikethrough
+    html_js_files: [ ['https://plausible.io/js/script.js', {'defer': 'defer', 'data-domain': 'biosc1630-2023-fall.aalexmmaldonado.com'}] ]
   extra_extensions:
     - sphinx_last_updated_by_git
 
