--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,41 +1,65 @@
 name: gh-pages
 
 on:
-  # Trigger the workflow on push to main branch
+  # Runs on pushes targeting the default branch
   push:
-    branches:
-      - main
+    branches: ["main"]
 
-# This job installs dependencies, build the book, and pushes it to `gh-pages`
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+    # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
-
-  build-book:
-
+  # Single deploy job since we're just deploying
+  deploy:
+    name: docs
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4.0.0
         with:
           fetch-depth: 0
 
-      - uses: actions/setup-python@v4
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v4.7.0
         with:
-          python-version: '3.11'
+          python-version: "3.11"
+      
+      - name: Install poetry
+        run: make poetry-download
+      
+      - name: Set up cache
+        uses: actions/cache@v3.3.2
+        with:
+          path: .venv
+          key: venv-3.11-${{ hashFiles('pyproject.toml') }}-${{ hashFiles('poetry.lock') }}
 
       - name: Install dependencies
-        run: pip install -r ./requirements.txt
+        run: |
+          poetry config virtualenvs.in-project true
+          poetry install
 
-      # Build the book.
-      # Need to override timezone environment variable
-      - name: Build the Jupyter book
+      - name: Build documentation
         run: make book
 
-      # Deploy the book's HTML to gh-pages branch
-      - name: GitHub Pages action
-        uses: peaceiris/actions-gh-pages@v3.9.3
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: gh-pages
-          publish_dir: book/_build/html
-          enable_jekyll: false
-          force_orphan: true
+          # Upload entire repository
+          path: 'book/_build/html'
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
+  
