Add poetry install to makefile

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "2023.09"
 description = ""
 authors = ["Alex M. Maldonado <aalexmmaldonado@gmail.com>"]
 readme = "README.md"
+license = "CC BY-SA 4.0"
 
 [tool.poetry.dependencies]
 python = "^3.9"
