--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ book/assignments/paper/paper-format-guidelines.md
 book/assignments/paper/paper-first-draft.md
 book/assignments/paper/paper-second-draft.md
 book/assignments/paper/paper-final-draft.md
+book/classes/activities/04-figure-explanations.md
+book/classes/activities/05-ai-paraphrasing.md
+book/classes/activities/05-ai-paraphrasing-chatgpt-answers.md
