--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -3,16 +3,7 @@ MD013:
   line_length: 600
 MD022: false
 MD024: false
-MD033:
-  allowed_elements:
-    - p
-    - strong
-    - a
-    - object
-    - b
-    - span
-    - iframe
-    - br
-    - img
+MD028: false
+MD033: false
 MD036: false
 MD041: false
