--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ book/assignments/paper/paper-final-draft.md
 book/classes/activities/04-figure-explanations.md
 book/classes/activities/05-ai-paraphrasing.md
 book/classes/activities/05-ai-paraphrasing-chatgpt-answers.md
+book/classes/activities/05-ai-paraphrasing-ai-summaries.md
