--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ book/assignments/paper/paper-first-draft.md
 book/assignments/paper/paper-second-draft.md
 book/assignments/paper/paper-final-draft.md
 book/classes/activities/04-figure-explanations.md
-book/classes/activities/05-ai-paraphrasing.md
-book/classes/activities/05-ai-paraphrasing-chatgpt-answers.md
-book/classes/activities/05-ai-paraphrasing-ai-summaries.md
+book/classes/activities/05-ai-storytelling.md
+book/classes/activities/05-ai-storytelling-chatgpt-answers.md
+book/classes/activities/05-ai-storytelling-ai-summaries.md
+book/admin/sorting_info.yml
