Updates to activity

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ book/classes/activities/05-ai-storytelling.md
 book/classes/activities/05-ai-storytelling-chatgpt-answers.md
 book/classes/activities/05-ai-storytelling-ai-summaries.md
 book/admin/sorting_info.yml
+book/classes/activities/files/biosc1630-class05-chatgpt-plagarism.pdf
