--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ book/assignments/paper/paper-first-draft.md
 book/assignments/paper/paper-second-draft.md
 book/assignments/paper/paper-final-draft.md
 book/classes/activities/04-figure-explanations.md
+book/resources/writing/cars-introduction-model.md
