--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,7 +29,7 @@ repos:
         name: git-secret-hide
         # If no unencrypted files are present, hide command fails?
         # Always force to exit 0 with: 2>&1 || true
-        entry: bash -c "export SECRETS_GPG_ARMOR=0 && git secret hide -d 2>&1 || true"
+        entry: bash -c "export SECRETS_GPG_ARMOR=0 && git secret hide -dm 2>&1 || true"
         language: system
         pass_filenames: false
         always_run: false
