--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ book/classes/lessons/lesson-15.md
 book/assignments/paper/second-draft.md
 book/assignments/paper/final-draft.md
 book/classes/activities/04-figure-explanations.md
+book/classes/activities/06-treat-biases.md
+book/classes/activities/06-treat-critical-analysis.md
+book/classes/activities/06-introduction-moves.md
