--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ book/classes/activities/04-figure-explanations.md
 book/classes/activities/06-treat-biases.md
 book/classes/activities/06-treat-critical-analysis.md
 book/classes/activities/06-introduction-moves.md
+book/classes/activities/06-critical-analysis-methods.md
