Add presentation audience info

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -97,6 +97,8 @@ parts:
             title: Final draft
       - file: assignments/presentation/index
         sections:
+          - file: assignments/presentation/audiences
+            title: Know your audience
           - file: assignments/presentation/rubric
             title: Rubric
       - file: assignments/examples/index
