--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,8 @@ default:
     - apt-get update
     - apt-get install build-essential -y
     - apt-get install curl -y
-    - make environment
+    - make poetry-download
+    - make install
 
 pages:
   script:
