--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,7 @@ default:
     - apt-get update
     - apt-get install build-essential -y
     - apt-get install curl -y
-    - make poetry-download
-    - make install
+    - make environment
 
 pages:
   script:
